--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,11 @@
 <h1>Listing events</h1>
 
+<% if current_user %>
+  Signed in as <%= current_user.email %> | <%= link_to "Logout", '/logout' %>
+<% else %>
+  <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
+<% end %>
+
 <table>
   <thead>
     <tr>
