Adicionando timepicker e solução para inicio da reunião

--- a/app/views/users/list.html.erb
+++ b/app/views/users/list.html.erb
@@ -48,7 +48,7 @@
                 </li>
                 <% if current_user.is_admin == 1 %>
                 <li>
-                    <a href="#">Adicionar Reunião</a>
+                    <a href="/add">Adicionar Reunião</a>
                 </li>
                 <% end %>
                 <% if current_user.is_admin == 1 %>
