--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,8 @@
  *
  *= require_self
  *= require sweetalert
+ *= require bootstrap-datepicker
  *= require_tree .
+ *= require bootstrap
  *= require fullcalendar
  */
