--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,157 @@
-<h1>New event</h1>
 
-<%= render 'form' %>
+<!DOCTYPE html>
+<html lang="en">
 
-<%= link_to 'Back', events_path %>
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Simple Sidebar - Start Bootstrap Template</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="simple-sidebar.css" rel="stylesheet">
+
+    <link href="signin.css" rel="stylesheet">
+
+    <link href="sweetalert.css" rel="stylesheet">
+    <link href="bootstrap-datepicker.css" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+<body>
+
+    <div id="wrapper">
+
+        <!-- Sidebar -->
+        <div id="sidebar-wrapper">
+            <ul class="sidebar-nav">
+                <li class="sidebar-brand">
+                	<a href="#">
+                  		emeeting
+                  	</a>
+                </li>
+                <li>
+                    <a href="/events">Principal</a>
+                </li>
+                <% if current_user.is_admin == 1 %>
+                <li>
+                    <a href="/add">Adicionar Reunião</a>
+                </li>
+                <% end %>
+                <% if current_user.is_admin == 1 %>
+                <li>
+                  <%= link_to "Adicionar Novo Executivo", '/signup' %>
+                </li>
+                <li>
+                  <%= link_to "Listar Executivos", '/list' %>
+                </li>
+                <% end %>
+                <li>
+                    <%= link_to "Sair", '/logout' %>
+                </li>
+            </ul>
+        </div>
+
+        <!-- /#sidebar-wrapper -->
+
+        <!-- Page Content -->
+        <div id="page-content-wrapper">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <a href="#menu-toggle" class="btn btn-default btn-sm" id="menu-toggle"><<</a>
+                        <h1>Adicionar Reunião</h1>
+                        <% if flash[:error] %>
+					      <div class="alert alert-danger">
+					        <strong><%= flash[:error] %></strong>
+					      </div>
+					    <% end %>
+                        <% if flash[:success] %>
+                          <div class="alert alert-success">
+                            <strong><%= flash[:success] %></strong>
+                          </div>
+                        <% end %>
+					    <br>
+					    <br>
+					      <div class="col-md-8 col-md-offset-2">
+					        <%= form_for @event, :html => { :id => "eventsForm"}  do |f| %>
+					          <%= f.text_field :title, :placeholder => "Assunto", class: "form-control" %>
+					          <br>
+					          <%= f.text_area :description, :placeholder => "Descrição" , class: "form-control"%>
+					          <br>
+                              <%= f.text_field :start_time, :id => 'datepicker', :placeholder => "Início" , class: "form-control" %>
+                              <br>
+					          <br>
+					          <%= f.submit "Adicionar Reunião", class: "btn btn-primary btn-block" %>
+					        <% end %>
+					    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /#page-content-wrapper -->
+
+    </div>
+    <!-- /#wrapper -->
+    <script type="text/javascript">
+    $(document).ready(function(){    
+        //Check if the current URL contains '#'
+        if(document.URL.indexOf("#")==-1){
+            // Set the URL to whatever it was plus "#".
+            url = document.URL+"#";
+            location = "#";
+
+            //Reload the page
+            location.reload(true);
+        }
+    });
+    </script>
+
+    <%= javascript_include_tag "sweetalert.min.js" %>
+
+    <%= javascript_include_tag "jquery.js" %>
+
+    <!-- Bootstrap Core JavaScript -->
+    <%= javascript_include_tag "bootstrap.min.js" %>
+
+    <%= javascript_include_tag "bootstrap-datepicker.js" %>
+    <%= javascript_include_tag "bootstrap-datepicker.pt-BR.min.js" %>
+
+    <script type="text/javascript">
+        $("#menu-toggle").click(function(e) {
+            e.preventDefault();
+            $("#wrapper").toggleClass("toggled");
+        });
+    </script>
+
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $('#datepicker').datepicker(
+            {
+                format: "dd/mm/yyyy",
+                language: "pt-BR",
+                todayBtn: "linked",
+                todayHighlight: true
+            }
+        );
+      });
+    </script>
+
+</body>
+
+</html>
+
