--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -45,7 +45,7 @@
                 </li>
                 <% if current_user.is_admin == 1 %>
                 <li>
-                    <a href="#">Adicionar Reunião</a>
+                    <a href="/add">Adicionar Reunião</a>
                 </li>
                 <% end %>
                 <% if current_user.is_admin == 1 %>
