Adicionando dispositivo para evitar falha de segurança (criacao de reuniao)

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -93,7 +93,7 @@
 					          <br>
 					          <%= f.text_area :description, :placeholder => "Descrição" , class: "form-control"%>
 					          <br>
-                              <%= f.text_field :start_time, :id => 'datepicker', :placeholder => "Início" , class: "form-control" %>
+                              <%= f.text_field :start_time, :id => 'datepicker', :placeholder => "Data" , class: "form-control" %>
                               <br>
 					          <br>
 					          <%= f.submit "Adicionar Reunião", class: "btn btn-primary btn-block" %>
